--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "client",
   "private": true,
   "version": "0.0.0",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2"
